--- a/static/AnimaBlend/css/indexcss.css
+++ b/static/AnimaBlend/css/indexcss.css
@@ -104,6 +104,7 @@ body {
 
 .nav-links {
   list-style: none;
+  font-weight: bold;
   padding: 0;
   margin: 0;
   display: flex;
@@ -126,16 +127,40 @@ body {
 .nav-links a:hover {
   color: #ea4c89;
 }
-.active-dic{
+/* .active-dic{
   border: 2px solid #ea4c89;
   border-radius: 50%;
-}
-.active{
-  border: 2px solid #ea4c89;
-  border-radius: 8px;
-  padding: 2px 4px;
-}
+} */
 /* nav_bar_css_ends_here */
+
+/* active_nav_css_element */
+.nav-links a {
+  padding: 10px;
+  position: relative;
+}
+
+/* .nav-links a.active {
+} */
+
+.nav-links a.active::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #ea4c89;
+}
+.nav-links a.active-dic::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 3px;
+  width: 100%;
+  height: 4px;
+  background-color: #ea4c89;
+}
+
 
 /* welcome_css_starts_here */
 
