--- a/templates/AnimaBlend/index.html
+++ b/templates/AnimaBlend/index.html
@@ -24,14 +24,14 @@
         </div>
         <ul class="nav-links">
           <li><a href="/">AnimaChat</a></li>
-          <li><a href="home">AnimaBlend</a></li>
+          <li><a href="/home">AnimaBlend</a></li>
           <li><a href="/" class="active-dic"><img src="{% static "AnimaBlend/assets/index-images/zoro-logo.png" %}" class="debian"></a></li>
           <li><a href="/">Community</a></li>
           <li><a href="/">About</a></li>
         </ul>
       </nav>
       <div class="search">
-        <form name="search-form" method="get" action="search">
+        <form name="search-form" method="get" action="/search">
           <input type="text" placeholder="Search..." name="search">
           <button type="submit">Go</button>
         </form>
