--- a/templates/AnimaBlend/play.html
+++ b/templates/AnimaBlend/play.html
@@ -26,7 +26,7 @@
         </div>
         <ul class="nav-links">
           <li><a href="/">AnimaChat</a></li>
-          <li><a href="home">AnimaBlend</a></li>
+          <li><a href="/home">AnimaBlend</a></li>
           <li>
             <a href="/"
               ><img src="{% static "AnimaBlend/assets/index-images/zoro-logo.png" %}"
