--- a/static/AnimaBlend/css/home.css
+++ b/static/AnimaBlend/css/home.css
@@ -6,18 +6,24 @@ body {
   box-sizing: border-box;
 }
 
+/* *,
+*::before,
+*::after {
+  box-sizing: border-box;
+} */
+
 .home-container {
-  background-color: #474747;
+  /* background-color: #474747; */
+  background-color: rgba(176, 224, 230, 0.132);
   margin: 0px 2px 2px 2px;
   border-radius: 12px;
 }
 
 .carousel-container {
-  background-image: url();
   height: calc(93dvh - 4px);
   width: 100%;
   display: flex;
-  position: relative;
+  /* position: relative; */
   overflow: hidden;
   border-radius: 15px;
 }
@@ -112,4 +118,125 @@ p {
   right: 10px;
 }
 
+/* card_slider_section hiha */
 
+.trending-card-slider-section{
+  margin: 50px 0px 0px 0px;
+}
+
+.trending-heading{
+  margin: 0px 0px 20px 20px;
+  /* color: #f1f1f1; */
+  color: #333;
+  font-size: 20px;
+  font-weight: 800;
+}
+
+/* Slider container */
+.home-card-slider-wrapper{
+  position: relative;
+  width: 88vw;
+  margin: auto;
+  display: flex;
+  align-items: center;
+}
+
+.home-card-slider-container {
+  width: 100%;
+  overflow: hidden;
+}
+
+/* Slider wrapper */
+.home-card-slider {
+  padding: 10px 0px;
+  display: flex;
+  transition: transform 0.5s ease;
+  gap: 40px; /* Adjust the gap between the cards */
+}
+
+.home-card-slider a{
+  text-decoration: none;
+  flex: 0 0 19.66vw; /* Flex-basis for one card */
+}
+
+/* Card styles */
+.home-card {
+  width: 100%;
+  height: 28vw;
+  border-radius: 8px;
+  overflow: hidden;
+  font-family: Arial, sans-serif;
+  /* background-color: #ea4c89; */
+  background-color: #EE539B;
+  box-shadow: 0 0 10px gray;
+  text-align: center;
+  padding: 0px;
+}
+.home-card:hover {
+  background-color: #ea4c;
+  .home-card-episodes{
+    /* color: #708; */
+  }
+}
+
+.home-card img {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+.home-card-title {
+  font-size: 1.43vw;
+  /* color: #333; */
+  color: #fff;
+  font-weight: bold;
+  margin: 10px 0;
+  overflow: hidden;
+}
+.home-card-episodes {
+  font-size: 1.1vw;
+  /* color: #666; */
+  /* color: #D3D3D3; */
+  color: rgba(51, 51, 51, 0.7);
+  margin-bottom: 15px;
+}
+.home-card-image {
+  position: relative;
+  top: 0px;
+  height: 80%;
+  width: 100%;
+}
+.home-card-image img {
+  border-radius: 8px;
+}
+
+/* Navigation buttons */
+.home-card-prev, .home-card-next {
+  background-color: #333;
+  color: #f1f1f1;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 1.5em;
+  z-index: 10; /* Ensure the buttons appear above the slider */
+}
+.home-card-prev {
+  left: -35px;
+}
+.home-card-next {
+  right: -35px;
+}
+.home-card-prev:hover, .home-card-next:hover {
+  background-color: #444;
+}
+
+
+/* responsive_css_starts_here */
+
+@media (max-width:1024px) {
+  .home-card-prev, .home-card-next {
+    visibility: hidden;
+  }
+}
