--- a/static/AnimaBlend/css/indexcss.css
+++ b/static/AnimaBlend/css/indexcss.css
@@ -125,40 +125,17 @@ body {
 }
 
 .nav-links a:hover {
-  color: #ea4c89;
+  color: #f082ac;
 }
-/* .active-dic{
+.active-dic{
   border: 2px solid #ea4c89;
   border-radius: 50%;
-} */
+}
 /* nav_bar_css_ends_here */
 
 /* active_nav_css_element */
-.nav-links a {
-  padding: 10px;
-  position: relative;
-}
-
-/* .nav-links a.active {
-} */
-
-.nav-links a.active::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 4px;
-  background-color: #ea4c89;
-}
-.nav-links a.active-dic::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 3px;
-  width: 100%;
-  height: 4px;
-  background-color: #ea4c89;
+.nav-links a.active {
+  color: #ea4c89;
 }
 
 
