--- a/static/AnimaBlend/css/play.css
+++ b/static/AnimaBlend/css/play.css
@@ -4,11 +4,13 @@ body {
   background-color: #fff;
 }
 
-*,
+
+
+/* *,
 *::before,
 *::after {
   box-sizing: border-box;
-}
+} */
 
 a, button {
   -webkit-tap-highlight-color: transparent;  /* Disable blue highlight */
@@ -26,10 +28,11 @@ a:focus, a:active, button:focus, button:active {
 
 
 .play-container{
-  margin: 1px 3px 3px 3px;
+  margin: 0px 2px 2px 2px;
   color: #FEFEFE;
   border-radius: 12px;
-  background-color: rgba(51, 51, 51, .9);
+  background-color: #3F3F3F;
+  /* background-color: rgba(51, 51, 51, .9); */
   /* background-color: #151315; */
   /* height: calc(93dvh - 4px); */
   overflow: scroll;
@@ -43,6 +46,7 @@ a:focus, a:active, button:focus, button:active {
 }
 .play-video{
   width: 100%;
+  height: calc(93dvh - 40px);
 }
 
 .post-video-details{
@@ -122,7 +126,8 @@ input:checked + .slider:before {
 /* all_episode_css_section */
 
 .play-division{
-  background-color: #474747;
+  /* background-color: #474747; */
+  background-color: #3F3F3F;
   text-align: center;
   padding: 10px 0px;
 }
@@ -150,9 +155,11 @@ input:checked + .slider:before {
   height: 50%;
   background-color: #333;
   border: 0px;
+  border-radius: 12px;
   margin-top: 100px;
   font-size: 30px;
   padding: 10px 20px;
+  color: #FEFEFE;
 }
 .footer-head{
   font-weight: 800;
@@ -205,13 +212,27 @@ input:checked + .slider:before {
 
 /* responsive_css_starts_here */
 
-@media (max-width:768px){
-  .play-container{
-    border-radius: 8px;
-    margin: 0px 2px 2px 2px;
-  }
+@media (max-width:1200px){
   .play-main{
     width: 100%;
+  }
+  .play-video{
+    height: 700px;
+  }
+}
+
+@media (max-width:1024px){
+  .play-video{
+    height: 550px;
+  }
+}
+
+@media (max-width:768px){
+  .play-video{
+    height: 400px;
+  }
+  .play-container{
+    border-radius: 8px;
   }
   .play-footer{
     font-size: 20px;
@@ -224,5 +245,20 @@ input:checked + .slider:before {
   }
   .post-video-details{
     flex-direction: column;
+  }
+  .play-footer{
+    border-radius: 8px;
+  }
+}
+
+@media (max-width:600px){
+  .play-video{
+    height: 300px;
+  }
+}
+
+@media (max-width:400px){
+  .play-video{
+    height: 250px;
   }
 }
